Latest version of the notebook.

--- a/CakeProblem.ipynb
+++ b/CakeProblem.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "#Solving a Cake-Eating Problem using Python\n",
     "\n",
-    "*This work is, in one hand, study notes on the book Economic Dynamics by Jerome Adda and Russel Cooper and, in the other hand, an application of the tools proposed by Quantitative Economics by Thomas Sargent and John Stachurski.  \n",
+    "*This work follows the first couple of chapters of the book [Economic Dynamics by Jerome Adda and Russel Cooper](http://www.amazon.com/Dynamic-Economics-Quantitative-Methods-Applications/dp/0262012014). Perhaps more importantly, it is an application of the tools proposed by [Quantitative Economics by Thomas Sargent and John Stachurski](www.quant-econ.net).  \n",
     "The code used for solving the problems presented in this document was largely based on the code provided by Quantitative Economics. \n",
     "The code snippets shown in this document have been adapted for ease of exposition.  \n",
     "The full code is available upon request until I figure a way to put it online (basically until I learn to use Github).*  \n",
