Updated links in Notebook

--- a/CakeProblem.ipynb
+++ b/CakeProblem.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "#Solving a Cake-Eating Problem using Python\n",
     "\n",
-    "*This work follows the first couple of chapters of the book [Economic Dynamics by Jerome Adda and Russel Cooper](http://www.amazon.com/Dynamic-Economics-Quantitative-Methods-Applications/dp/0262012014). Perhaps more importantly, it is an application of the tools proposed by [Quantitative Economics by Thomas Sargent and John Stachurski](www.quant-econ.net).  \n",
+    "*This work follows the first couple of chapters of the book [Economic Dynamics by Jerome Adda and Russel Cooper](http://www.amazon.com/Dynamic-Economics-Quantitative-Methods-Applications/dp/0262012014). Perhaps more importantly, it is an application of the tools proposed by [Quantitative Economics by Thomas Sargent and John Stachurski](http://quant-econ.net).  \n",
     "The code used for solving the problems presented in this document was largely based on the code provided by Quantitative Economics. \n",
     "The code snippets shown in this document have been adapted for ease of exposition.  \n",
     "The full code is available upon request until I figure a way to put it online (basically until I learn to use Github).*  \n",
@@ -212,7 +212,7 @@
     "\n",
     "*[Stokey, N., & Lucas, R. with E. Prescott (1989): Recursive Methods in Economic Dynamics.](http://www.amazon.com/Recursive-Methods-Economic-Dynamics-Stokey/dp/0674750969) pp. 49/55  \n",
     "\n",
-    "The following code is taken from [*Quantitative Economics by John Stachurski and Thomas J. Sargent.*](quant-econ.net)\n",
+    "The following code is taken from [*Quantitative Economics by John Stachurski and Thomas J. Sargent.*](http://quant-econ.net)\n",
     "\n",
     "```python\n",
     "    def compute_fixed_point(T, v, error_tol=1e-3, max_iter=50,\n",
@@ -727,7 +727,7 @@
     "$$ V(X, \\;\\  {\\nu}) = max\\{ u(X, \\nu), \\;\\  \\beta \\underset{{\\nu}\\large{'} | {\\nu}} E[V(\\rho X, \\;\\ {\\nu}')]\\} $$\n",
     "$$ \\large{\\nu_{t} = \\rho \\nu_{t-1} + \\epsilon} , \\;\\ \\large{\\epsilon} \\sim \\mathcal{N}(0, 1)$$\n",
     "\n",
-    "We can approximate an AR(1) process using a first order Markov Chain following Tauchen's method. The following code is from [*Quantitative Economics by John Stachurski and Thomas J. Sargent.*](www.quant-econ.net))\n",
+    "We can approximate an AR(1) process using a first order Markov Chain following Tauchen's method. The following code is from [*Quantitative Economics by John Stachurski and Thomas J. Sargent.*](http://quant-econ.net))\n",
     "\n",
     "```python\n",
     "    def approx_markov(rho, sigma_u, m=3, n=7):\n",
@@ -816,7 +816,7 @@
     "\n",
     "[Stokey, N., & Lucas, R. with E. Prescott (1989): Recursive Methods in Economic Dynamics.](http://www.amazon.com/Recursive-Methods-Economic-Dynamics-Stokey/dp/0674750969)\n",
     "\n",
-    "[**Quantitative Economics by John Stachurski and Thomas J. Sargent.**](www.quant-econ.net)"
+    "[**Quantitative Economics by John Stachurski and Thomas J. Sargent.**](http://quant-econ.net)"
    ]
   }
  ],
