--- a/CakeProblem.ipynb
+++ b/CakeProblem.ipynb
@@ -28,7 +28,7 @@
     "*This work follows the first couple of chapters of the book [Economic Dynamics by Jerome Adda and Russel Cooper](http://www.amazon.com/Dynamic-Economics-Quantitative-Methods-Applications/dp/0262012014). Perhaps more importantly, it is an application of the tools proposed by [Quantitative Economics by Thomas Sargent and John Stachurski](http://quant-econ.net).  \n",
     "The code used for solving the problems presented in this document was largely based on the code provided by Quantitative Economics. \n",
     "The code snippets shown in this document have been adapted for ease of exposition.  \n",
-    "The full code is available upon request until I figure a way to put it online (basically until I learn to use Github).*  \n",
+    "The full code is available on [Github](https://github.com/Zung-0/CakeEating).\n",
     "\n",
     "###Basic Problem\n",
     "There is a cake of size $W$. You must decide how much cake to eat at each period. Let's say the cake does not spoil.\n",
